# senior-project-spring-2022-mage-game-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  linux-compile-shaders.sh  main.cpp  windows-compile-shaders.bat
src/: main.cpp  test-game.cpp  test-game.hpp  test-window.cpp  test-window.hpp
src/camera-resources/: camera.cpp  camera.hpp
src/object-resources/: model.cpp  model.hpp  object.cpp  object.hpp  transport.cpp  transport.hpp
src/pipeline-resources/: artist.cpp  artist.hpp  device.cpp  device.hpp  pipeline.cpp  pipeline.hpp  swapchain.cpp  swapchain.hpp
src/window-resources/: window.cpp  window.hpp
